<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  
  <modelVersion>4.0.0</modelVersion>
  <groupId>pm.google.photos.backup</groupId>
  <artifactId>google-photos-backup</artifactId>
  <version>0.0.1</version>
  
  <name>Google Photos Backup</name>
  
  <repositories>
    <repository>
      <id>jds</id>
      <url>https://gitlab.com/api/v4/projects/18770792/packages/maven</url>
    </repository>
  </repositories>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>21</maven.compiler.release>
  </properties>
  
  <dependencies>
  
  	<dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.10.1</version>
    </dependency>
    
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.7</version>
    </dependency>
    
    <dependency>
      <groupId>commons-cli</groupId>
      <artifactId>commons-cli</artifactId>
      <version>1.4</version>
    </dependency>
  
  	<dependency>
      <groupId>com.google.oauth-client</groupId>
      <artifactId>google-oauth-client</artifactId>
      <version>1.35.0</version>
    </dependency>

    <dependency>
      <groupId>com.google.photos.library</groupId>
      <artifactId>google-photos-library-client</artifactId>
      <version>1.7.3</version>
    </dependency>
    
    <dependency>
      <groupId>jds</groupId>
      <artifactId>jds</artifactId>
      <version>1</version>
    </dependency>
  
  </dependencies>
  
  
  <build>
    <plugins>
    
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.2</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <finalName>GooglePhotosBackup</finalName>
              <outputDirectory>dist</outputDirectory>
              <transformers>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>pm.google.photos.backup.GooglePhotosBackupApp</mainClass>
                  <manifestEntries>
                    <Class-Path>.</Class-Path> 
                  </manifestEntries>
                </transformer>
              </transformers>
              <filters>
                <filter>
                  <artifact>*:*</artifact>
                  <excludes>
                    <excludes>META-INF/*.SF</excludes>
                    <excludes>META-INF/*.DSA</excludes>
                    <excludes>META-INF/*.RSA</excludes>
                    <exclude>META-INF/*.MF</exclude>
                    <exclude>META-INF/LICENSE*</exclude>
                    <exclude>META-INF/NOTICE*</exclude>
                    <exclude>META-INF/DEPENDENCIES</exclude>
                  </excludes>
                </filter>
              </filters>
            </configuration>
          </execution>
        </executions>
      </plugin>
      
    </plugins>
  </build>
  
</project>